--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
     He is the best player in the team's history. <a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)">Go here for more info!</a><br>
   </p>
 
+  <p>
+    Ryan had two conference championship appearences during his tenure, in 2012 and 2016
+    The first one he lost to Colin Kaepernick and San Fran 28-24. His second one he beat Aaron Rodgers and the pack 44-21.
+
+    
+  </p>
+
   
 </body>
