--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <p>
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
-    He is the best player in the team's history. <a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)">Go here for more info!</a><br>
+    He is the best player in the team's history. <a href="resource.html">Go here for more info!</a><br>
   </p>
 
   <p>
