--- a/resource.html
+++ b/resource.html
@@ -14,8 +14,8 @@
   </p>
 
     <ul>
-       <li>W</li>
-
+       <li><a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)"></li>
+       <li><a href="https://www.nfl.com/players/matt-ryan/"></li>
 
 
       
