--- a/resource.html
+++ b/resource.html
@@ -16,7 +16,7 @@
     <ul>
        <li><a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)">Wiki</li>
        <li><a href="https://www.nfl.com/players/matt-ryan/">NFL Profile</li>
-
+       <li><a href="https://www.pro-football-reference.com/players/R/RyanMa00.htm">PFF Profile</li>
 
       
     </ul>
