--- a/resource.html
+++ b/resource.html
@@ -21,6 +21,17 @@
       
     </ul>
 
+    <table>
+       <tr>
+         Julio Jones
+       </tr>
+       <tr>
+         Teammate
+       </tr>
+       <tr>
+        Boston College
+       </tr>
+    </table>
     
   </body>
 
