--- a/resource.html
+++ b/resource.html
@@ -30,10 +30,10 @@
        </tr>
        <tr>
          <td>
-          2008 NFL Draft
+          Exton
          </td>
           <td>
-           3rd Overall Pick
+           Hometown
           </td>
        </tr>
        <tr>
