--- a/resource.html
+++ b/resource.html
@@ -38,10 +38,10 @@
        </tr>
        <tr>
          <td>
-          Hotel?
+          MVP
          </td>
          <td>
-           Trivago
+           2016
         </td>
         
        </tr>
