--- a/resource.html
+++ b/resource.html
@@ -51,7 +51,7 @@
      <hr>
 
      
-
+         <img src="https://github.com/watchdogsrules/Lab/edit/main/Washington_Football_Team_at_Atlanta_Falcons_(3_October_2021)_DSC_4628_(51555290664)_(cropped).jpg">
 
 
 
