--- a/resource.html
+++ b/resource.html
@@ -53,7 +53,7 @@
      
          <img src="https://github.com/watchdogsrules/Lab/edit/main/Washington_Football_Team_at_Atlanta_Falcons_(3_October_2021)_DSC_4628_(51555290664)_(cropped).jpg">
 
-
+          <a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)">Go here for more info!</a><br>
 
 
    
