--- a/resource.html
+++ b/resource.html
@@ -63,9 +63,9 @@
   </p>
 
     <ul>
-       <li><a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)">Wiki</li>
-       <li><a href="https://www.nfl.com/players/matt-ryan/">NFL Profile</li>
-       <li><a href="https://www.pro-football-reference.com/players/R/RyanMa00.htm">PFF Profile</li>
+       <li><a href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)">Wiki</li><br>
+       <li><a href="https://www.nfl.com/players/matt-ryan/">NFL Profile</li><br>
+       <li><a href="https://www.pro-football-reference.com/players/R/RyanMa00.htm">PFF Profile</li><br>
        <li><a href="https://www.instagram.com/ryan_matt02/?hl=en">Instagram</li><br>
       
     </ul>
