--- a/resource.html
+++ b/resource.html
@@ -63,10 +63,10 @@
   </p>
 
     <ul>
-       <li> href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)"Wiki</li><br>
-       <li> href="https://www.nfl.com/players/matt-ryan/"NFL Profile</li><br>
-       <li> href="https://www.pro-football-reference.com/players/R/RyanMa00.htm"PFF Profile</li><br>
-       <li> href="https://www.instagram.com/ryan_matt02/?hl=en"Instagram</li><br>
+       <li> href="https://en.wikipedia.org/wiki/Matt_Ryan_(American_football)"Wiki</li>
+       <li> href="https://www.nfl.com/players/matt-ryan/"NFL Profile</li>
+       <li> href="https://www.pro-football-reference.com/players/R/RyanMa00.htm"PFF Profile</li>
+       <li> href="https://www.instagram.com/ryan_matt02/?hl=en"Instagram</li>
       
     </ul>
 
