--- a/resource.html
+++ b/resource.html
@@ -75,7 +75,7 @@
 
     <p>
      Menu
-     <a href="https://watchdogsrules.github.io/Lab/">Homepage</a>
+     <a href="https://watchdogsrules.github.io/Lab/">Homepage</a><br>
      <a href+="https://watchdogsrules.github.io/Lab/resource.html">Resource Page</a>
      
     </p>
