--- a/resource.html
+++ b/resource.html
@@ -74,7 +74,7 @@
 
 
     <p>
-     Menu
+     Menu<br>
      <a href="https://watchdogsrules.github.io/Lab/">Homepage</a><br>
      <a href+="https://watchdogsrules.github.io/Lab/resource.html">Resource Page</a>
      
