--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
   <img src="https://github.com/watchdogsrules/Lab/edit/main/NFL-Atlanta-Falcons.png">
 
+  <hr>
+
+  <p>
+
+    Menu<br>
+    <a href="https://watchdogsrules.github.io/Lab/resource.html">Resource Page</a>
+    
+  </p>
+
 
   
 </body>
