--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
   </p>
 
-  <img src="https://github.com/watchdogsrules/Lab/edit/main/NFL-Atlanta-Falcons.png">
+  <img src="https://github.com/watchdogsrules/Lab/blob/main/Washington_Football_Team_at_Atlanta_Falcons_(3_October_2021)_DSC_4628_(51555290664)_(cropped).jpg?raw=true">
 
   <hr>
 
