--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+QLD:wght@100..400&display=swap" rel="stylesheet">
-    <title>Matt Ryan</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
+      <title>Matt Ryan</title>
 
 
 
@@ -46,11 +46,11 @@
   <script>
 
     body (
-            font-family: "Playwrite Australia"; sans serif
+            font-family: "Tiny5"; sans serif
       )
 
     
-  </script>
+  </script
 
 
   
