--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
-      <title>Matt Ryan</title>
+      <title>Matt Ryan onclick="alert('why'd you click me?');"</title>
 
 
 
@@ -49,7 +49,7 @@
 
 
 <body>
-  <h1>Matt Ryan id-"subtitle"</h1>
+  <h1>id="subtitle" Matt Ryan</h1>
 
   <p>
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
@@ -79,7 +79,8 @@
 
   <script>
 
-    var uncleroger = document.getElementById
+    var uncleroger = document.getElementById("subtitle")
+      unclerodger.setAttribute
 
     
   </script
