--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
   <head>
 
 
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
-      <title>Matt Ryan onclick="alert('why'd you click me?');"</title>
+    
+      <title>Matt Ryan</title>
 
 
 
@@ -49,7 +47,7 @@
 
 
 <body>
-  <h1>id="subtitle" Matt Ryan</h1>
+  <h1>id="subtitle" Matt Ryanonclick="alert('why'd you click me?');"</h1>
 
   <p>
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
