--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <body>
-  <h1>id="subtitle" Matt Ryanonclick="alert('why'd you click me?');"</h1>
+  <h1>Matt Ryan onclick="alert('why'd you click me?');"</h1>
 
   <p>
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
