--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <body>
-  <h1>Matt Ryan onclick="alert('why'd you click me?');"</h1>
+  <h1>Matt Ryan</h1>
 
   <p>
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
@@ -76,9 +76,8 @@
     <input type="button" value="DO NOT CLICK THIS BUTTON" onclick="alert('Why'd you click on me?');">
 
   <script>
-
-    var uncleroger = document.getElementById("subtitle")
-      unclerodger.setAttribute
+      
+       alert("you're pretty good");"
 
     
   </script
