--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </p>
 
   <p>
+    id="subtitle"
     Ryan had two conference championship appearences during his tenure, in 2012 and 2016. <br>
     The first one he lost to Colin Kaepernick and San Fran 28-24. His second one he beat Aaron Rodgers and the pack 44-21.
 
