--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     He is the best player in the team's history. <a href="https://www.espn.com/nfl/player/_/id/11237/matt-ryan">Go here for more info!</a><br>
   </p>
 
-  <p>
-    id="subtitle"
+  <p id="subtitle">
+    
     Ryan had two conference championship appearences during his tenure, in 2012 and 2016. <br>
     The first one he lost to Colin Kaepernick and San Fran 28-24. His second one he beat Aaron Rodgers and the pack 44-21.
 
