--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <h1>Matt Ryan</h1>
 
-  <p>
+  <p class="oddy">
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
     He is the best player in the team's history. <a href="https://www.espn.com/nfl/player/_/id/11237/matt-ryan">Go here for more info!</a><br>
   </p>
@@ -80,6 +80,8 @@
       
        alert("you're pretty good");
 
+
+    var subtitle = document.getElementById("subtitle");
     
   </script
 
