--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 <body>
   <h1>Matt Ryan</h1>
 
-  <p >
+  <p>
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
     He is the best player in the team's history. <a href="https://www.espn.com/nfl/player/_/id/11237/matt-ryan">Go here for more info!</a><br>
   </p>
 
-  <p class="oddy" onmouseover="this.setAttribute('class', '');">
+  <p class="oddy" onmouseover="this.setAttribute('class', '');" onmouseout="this.setAttribute('class', '');">
     
     Ryan had two conference championship appearences during his tenure, in 2012 and 2016. <br>
     The first one he lost to Colin Kaepernick and San Fran 28-24. His second one he beat Aaron Rodgers and the pack 44-21.
