--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <h1>Matt Ryan</h1>
 
-  <p id="subtitle">
+  <p id="audi">
     Matt Ryan was the Atlanta Falcons Quaterback from 2008 through the 2021 season <br>
     He is the best player in the team's history. <a href="https://www.espn.com/nfl/player/_/id/11237/matt-ryan">Go here for more info!</a><br>
   </p>
@@ -89,8 +89,8 @@
 
          function myExample ()
            {
-                var subtitle = document.getElementById("subtitle");
-                subtitle.setAttribute("class", "oddi");
+                var audi = document.getElementById("audi");
+                audi.setAttribute("class", "oddi");
            }
   </script
 
